# amm-contract

./: Cargo.toml  README.md
amm-simple/: Cargo.toml  build.sh
amm-simple/res/: amm_simple.wasm
amm-simple/src/: lib.rs  traits.rs
res/: amm_simple.wasm  token_contract.wasm
token-contract/: Cargo.toml
token-contract/src/: lib.rs
