[package]
name = "amm-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# near-sdk = { git = "https://github.com/near/near-sdk-rs.git"}
near-sdk                = "4.1.0"
near-contract-standards = "4.1.0"

[dev-dependencies]
workspaces              = "0.7.0"
serde_json              = "1.0"
tokio                   = { version = "1.14", features = ["full"] }
anyhow                  = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true