[package]
name = "amm-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# near-sdk = { git = "https://github.com/near/near-sdk-rs.git"}
near-sdk                = "4.1.0"
near-contract-standards = "4.1.0"

[dev-dependencies]
workspaces              = "0.7.0"
serde_json              = "1.0"
tokio                   = { version = "1.14", features = ["full"] }
anyhow                  = "1.0"

[lib]
crate-type = ["cdylib"]